# smart-inference-ai-fusion

./: .gitignore  .pylintrc  CHANGES.md  PHASE_4_REVIEW.md  PHASE_4_SUMMARY.md  README.md  REVIEW_COMPLETE.md  main.py  makefile  pontodeparada  pyproject.toml  relatorio.md  requirements.txt  roteiro-TSE.md  run.sh
.github/: CI_PIPELINE.md  copilot-instructions.md
configs/: advanced_verification_config.py  wine_advanced_verification.py
docs/: ARCHITECTURE_CHANGES.md  COMPATIBILITY.md  INDEX.md  REFACTORING.md  SIP-Q_QUANTIZATION_FEATURE_PLAN.md  SIP-Q_RESULTADOS.md  TESTING.md  architecture_mermaid.md  arquitetura.wsd  class_diagram_spi_v.puml  figura.wsd  formal_verification_system.md  inference_summary.md  quantization_chapter.md  sequencia.wsd  sip_class_diagram.puml  sip_sequence_diagram.puml  solver_verdicts.md  verification_architecture_review.md  verification_cleanup.md  verification_integration_guide.md  verification_solver_mapping.md
examples/: counterexample_test.py  forced_counterexample_test.py  formal_verification_usage.py  structured_constraints_example.py  test_wine_advanced_verification.py  verification_integration_example.py  wine_advanced_config.py  wine_multi_solver_demo.py
experiments/: __init__.py
logs/: .gitkeep
results/: .gitkeep
scripts/: __init__.py  analyze_case4_results.py  artifact_relocation.py  case1.py  case1_sip_classic.py  case2.py  case2_sip_paradigmas_super_nao_super.py  case3.py  case3_sip_v.py  case4.py  case4_sip_q.py  case5_sip_sipv.py  case6_sip_sipq.py  case7_sipv_sipq.py  case8_sip_sipv_sipq.py  case_combo_common.py  collect_sipq_results.py  extract_sipv_data.py  file_logger.py  generate_cases_report.py  generate_model_resilience_report.py  generate_pipeline_breakdown_table.py  generate_verification_table.py  generate_verification_value_report.py  results_io.py  run_experiment.py  (+2 more)
src/: __init__.py
(+329 files in other folders)
