[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart_inference_ai_fusion"
version = "0.1.0"
description = "Framework for synthetic inference experiments and controlled perturbations in AI algorithms"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "Sergillam Barroso Oliveira", email = "sgm.oliveira96@gmail.com" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# === Runtime (RUN) - pins que você pediu ===
dependencies = [
  "pydantic==2.11.7",
  "scikit-learn==1.7.1",
  "pandas==2.3.2",
]

[project.optional-dependencies]
# === Desenvolvimento (DEV) - pins que você pediu ===
dev = [
  "pydocstyle==6.3.0",
  "pylint==3.3.8",
  "pytest==8.4.1",
  "black==25.1.0",
  "isort==6.0.1",
]

[project.scripts]
siai = "smart_inference_ai_fusion.experiments.run:main"

[tool.setuptools.packages.find]
include = ["smart_inference_ai_fusion*"]
exclude = ["tests*", "tests"]

# ---------------------------
# Ferramentas de qualidade
# ---------------------------

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.black]
line-length = 100

[tool.pydocstyle]
convention = "google"

# Pylint 3.x lê configuração do pyproject.toml
[tool.pylint.main]
py-version = "3.10"

[tool.pylint.format]
max-line-length = 100
